scrollbar lock to prevent content shifting left

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,4 +1,7 @@
 @import 'bootstrap/dist/css/bootstrap'; //bootstrap override
+
+html { overflow-y: scroll; }
+
 .navbar {
   background-color: black !important;
 }
